Issue #1 - application is loading on IE -fixed

--- a/src/app/containers/AppWrapper/index.scss
+++ b/src/app/containers/AppWrapper/index.scss
@@ -1,3 +1,7 @@
+main{
+  display: block;  /* new */
+}
+
 body {
   box-sizing: border-box;
 }
